@@ -270,6 +270,9 @@ def menu_music(mainwindow):
     m.addAction(ac.music_vertical)
     m.addAction(ac.music_continuous)
     m.addSeparator()
+    m.addAction(ac.music_rotate_right)
+    m.addAction(ac.music_rotate_left)
+    m.addSeparator()
     m.addAction(ac.music_copy_image)
     m.addAction(ac.music_copy_text)
     m.addSeparator()
